--- a/index.html
+++ b/index.html
@@ -1,165 +1,152 @@
 <!DOCTYPE html>
-<html lang="zxx">
-
+<html lang="zxx" translate="no">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lesson3</title>
+    <title>Catalog</title>
     <link rel="stylesheet" href="./css/globals.css">
 </head>
-
 <body>
-    <!-- flex-direction - Задаё,т направление выравнивания т.е.  -->
-    <!-- align-items - Выравнивает контент по вертикали, есть 4 опции flex-start(сверху), center(По центру), flex-end(Снизу), stretch(Заполнению)
-    Этот атрибут зависит от flex-direction-->
-    <section class="section">
+    <section class="products">
         <div class="container">
-            <div class="section-header">
-                <h1 class="title-1">
+            <div class="products-header">
+                <h1 class="products-title-1">
                     New Products
                 </h1>
-                <p class="text">
-                    Its our new collection
+                <p class="products-subtitle">
+                    DOLOR SIT AMET
                 </p>
             </div>
-            <div class="product-wrapper">
-                <div class="product">
-                    <img src="./images/3799ac1ebe2580cd843fbcfd7394d441a91e4574.jpg" alt="productID">
-                    <p class="text">
+            <ul class="products-list">
+                <li class="product">
+                    <div class="product-image">
+                        <img src="./images/skirt-1.jpg" alt="Skirt" class="product-pic">
+                    </div>
+                    <h3 class="product-title">
                         Cotton Skirt
+                    </h3>
+                    <p class="product-price">
+                        <del class="old-price">$100</del><strong class="new-price">$95</strong>
                     </p>
-                    <p class="text old-price">
-                        $100<br>
-                    </p>
-                    <p class="text new-price">
-                        $90
-                    </p>
-                </div>
-                <div class="product">
-                    <img src="./images/3799ac1ebe2580cd843fbcfd7394d441a91e4574.jpg" alt="productID">
-                    <p class="text">
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        <img src="./images/skirt-1.jpg" alt="Skirt" class="product-pic">
+                    </div>
+                    <h3 class="product-title">
                         Cotton Skirt
+                    </h3>
+                    <p class="product-price">
+                        <del class="old-price">$100</del><strong class="new-price">$95</strong>
                     </p>
-                    <p class="text old-price">
-                        $100<br>
-                    </p>
-                    <p class="text new-price">
-                        $90
-                    </p>
-                </div>
-                <div class="product">
-                    <img src="./images/3799ac1ebe2580cd843fbcfd7394d441a91e4574.jpg" alt="productID">
-                    <p class="text">
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        <img src="./images/skirt-1.jpg" alt="Skirt" class="product-pic">
+                    </div>
+                    <h3 class="product-title">
                         Cotton Skirt
+                    </h3>
+                    <p class="product-price">
+                        <del class="old-price">$100</del><strong class="new-price">$95</strong>
                     </p>
-                    <p class="text old-price">
-                        $100<br>
-                    </p>
-                    <p class="text new-price">
-                        $90
-                    </p>
-                </div>
-                <div class="product">
-                    <img src="./images/3799ac1ebe2580cd843fbcfd7394d441a91e4574.jpg" alt="productID">
-                    <p class="text">
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        <img src="./images/skirt-1.jpg" alt="Skirt" class="product-pic">
+                    </div>
+                    <h3 class="product-title">
                         Cotton Skirt
+                    </h3>
+                    <p class="product-price">
+                        <del class="old-price">$100</del><strong class="new-price">$95</strong>
                     </p>
-                    <p class="text old-price">
-                        $100<br>
-                    </p>
-                    <p class="text new-price">
-                        $90
-                    </p>
-                </div>
-                <div class="product">
-                    <img src="./images/3799ac1ebe2580cd843fbcfd7394d441a91e4574.jpg" alt="productID">
-                    <p class="text">
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        <img src="./images/skirt-1.jpg" alt="Skirt" class="product-pic">
+                    </div>
+                    <h3 class="product-title">
                         Cotton Skirt
+                    </h3>
+                    <p class="product-price">
+                        <del class="old-price">$100</del><strong class="new-price">$95</strong>
                     </p>
-                    <p class="text old-price">
-                        $100<br>
-                    </p>
-                    <p class="text new-price">
-                        $90
-                    </p>
-                </div>
-                <div class="product">
-                    <img src="./images/3799ac1ebe2580cd843fbcfd7394d441a91e4574.jpg" alt="productID">
-                    <p class="text">
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        <img src="./images/skirt-1.jpg" alt="Skirt" class="product-pic">
+                    </div>
+                    <h3 class="product-title">
                         Cotton Skirt
+                    </h3>
+                    <p class="product-price">
+                        <del class="old-price">$100</del><strong class="new-price">$95</strong>
                     </p>
-                    <p class="text old-price">
-                        $100<br>
-                    </p>
-                    <p class="text new-price">
-                        $90
-                    </p>
-                </div>
-                <div class="product">
-                    <img src="./images/3799ac1ebe2580cd843fbcfd7394d441a91e4574.jpg" alt="productID">
-                    <p class="text">
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        <img src="./images/skirt-1.jpg" alt="Skirt" class="product-pic">
+                    </div>
+                    <h3 class="product-title">
                         Cotton Skirt
+                    </h3>
+                    <p class="product-price">
+                        <del class="old-price">$100</del><strong class="new-price">$95</strong>
                     </p>
-                    <p class="text old-price">
-                        $100<br>
-                    </p>
-                    <p class="text new-price">
-                        $90
-                    </p>
-                </div>
-                <div class="product">
-                    <img src="./images/3799ac1ebe2580cd843fbcfd7394d441a91e4574.jpg" alt="productID">
-                    <p class="text">
+                </li>
+                <li class="product">
+                    <div class="product-image">
+                        <img src="./images/skirt-1.jpg" alt="Skirt" class="product-pic">
+                    </div>
+                    <h3 class="product-title">
                         Cotton Skirt
+                    </h3>
+                    <p class="product-price">
+                        <del class="old-price">$100</del><strong class="new-price">$95</strong>
                     </p>
-                    <p class="text old-price">
-                        $100<br>
-                    </p>
-                    <p class="text new-price">
-                        $90
-                    </p>
-                </div>
-            </div>
+                </li>
+            </ul>
 
             <button class="button" type="button">
                 BROWSE ALL ITEMS
             </button>
+
         </div>
     </section>
     <footer class="footer">
-        <a href="#!" class="footer-link">
-            YOUR ACCOUNT
-        </a>
+        <div class="container">
+            <div class="footer-links">
+                <a href="#!" class="footer-link">
+                    YOUR ACCOUNT
+                </a>
+                <a href="#!" class="footer-link">
+                    CONTACT US
+                </a>
+                <a href="#!" class="footer-link">
+                    TERMS OF USE
+                </a>
+            </div>
 
-        <a href="#!" class="footer-link">
-            CONTACT US
-        </a>
+            <div class="footer-socials">
+                <a href="#!" class="social-link">
+                    <img src="./images/svg/facebook-icon.svg" alt="icon">
+                </a>
+                <a href="#!" class="social-link">
+                    <img src="./images/svg/twitter-icon.svg" alt="icon">
+                </a>
+                <a href="#!" class="social-link">
+                    <img src="./images/svg/instagram-icon.svg" alt="icon">
+                </a>
+                <a href="#!" class="social-link">
+                    <img src="./images/svg/p-icon.svg" alt="icon">
+                </a>
+            </div>
 
-        <a href="#!" class="footer-link">
-            TERMS OF USE
-        </a>
-
-        <div class="icons">
-            <a href="#!" class="icon-link">
-                <img src="./images/svg/facebook-icon.svg" alt="icon">
-            </a>
-            <a href="#!" class="icon-link">
-                <img src="./images/svg/twitter-icon.svg" alt="icon">
-            </a>
-            <a href="#!" class="icon-link">
-                <img src="./images/svg/instagram-icon.svg" alt="icon">
-            </a>
-            <a href="#!" class="icon-link">
-                <img src="./images/svg/p-icon.svg" alt="icon">
-            </a>
-
-
+            <p class="text">
+                &copy; 2025 Азим Махкамов
+            </p>
         </div>
-
-        <p class="text">
-            &copy; 2025 Азим Махкамов
-        </p>
     </footer>
 </body>
-
 </html>
